# Genesis

./: .clang-format  .gitignore  .gitmodules  BuildOnLinuxForWindow.sh  BuildOnLinuxForWindows.sh  CMakeLists.txt  README.md  RunGenesisMergeSamples.sh  xmake.lua
.cmake/: LinuxSpooftoolchain.cmake
.github/workflows/: cmake-multi-platform.yml
GenesisEditor/: CMakeLists.txt
GenesisEditor/include/GenesisEditor/: GenesisBundleEditor.hpp  GenesisEditor.hpp  GenesisFlowEditor.hpp  GenesisLogBox.hpp  GenesisNodeBuilder.hpp  GenesisOperationsEditor.hpp  GenesisPinTracker.hpp  GenesisUtils.hpp  GenesisWidgets.hpp  Main.hpp
GenesisEditor/include/GenesisEditor/live/: GenesisLive.hpp  GenesisLiveConnection.hpp  GenesisLivePackets.hpp
GenesisEditor/source/: GenesisBundleEditor.cpp  GenesisEditor.cpp  GenesisFlowEditor.cpp  GenesisLogBox.cpp  GenesisNodeBuilder.cpp  GenesisOperationsEditor.cpp  GenesisStyle.cpp  GenesisUtils.cpp  GenesisWidgets.cpp  Main.cpp
GenesisEditor/source/live/: GenesisLive.cpp  GenesisLiveConnection.cpp  GenesisLivePackets.cpp
GenesisEditor/source/live/packets/: GenesisLiveConnectionPacketBundleAction.cpp  GenesisLiveConnectionPacketFlowAction.cpp  GenesisLiveConnectionPacketOperationUpdate.cpp  GenesisLiveConnectionPacketResponseSerializedFile.cpp
GenesisEditor/source/operations/: GenesisDebugOperationEditor.cpp  GenesisFindPatternOperationEditor.cpp  GenesisGetOperationEditor.cpp  GenesisMathOperationEditor.cpp  GenesisOutputDataClassMemberVariableOperationEditor.cpp  GenesisOutputDataClassNonVirtualFunctionOperationEditor.cpp  GenesisOutputDataClassVTableFunctionOperation.cpp  GenesisOutputDataClassVirtualFunctionOperation.cpp  GenesisOutputDataClassVirtualFunctionOperationEditor.cpp  GenesisOutputDataStaticFunctionOperationEditor.cpp  GenesisOutputDataStaticVariableOperationEditor.cpp  GenesisRipOperationEditor.cpp
GenesisLiveRelay/: CMakeLists.txt
GenesisLiveRelay/include/GenesisLiveRelay/: GenesisLiveRelay.hpp  GenesisLiveRelayPeerConnection.hpp
GenesisLiveRelay/source/: GenesisLiveRelay.cpp  GenesisLiveRelayPeerConnection.cpp  Main.cpp
GenesisLiveShared/: CMakeLists.txt
GenesisLiveShared/include/GenesisLiveShared/: GenesisLive.hpp  GenesisLiveHeader.hpp  GenesisLiveRelayConfig.hpp  GenesisLiveRelayConnection.hpp  GenesisLiveRelayPacket.hpp
GenesisLiveShared/source/: GenesisLiveHeader.cpp  GenesisLiveRelayConfig.cpp  GenesisLiveRelayConnection.cpp  GenesisLiveRelayPacket.cpp
GenesisLiveShared/source/packets/: GenesisLiveRelayConnectionStringUpdate.cpp  GenesisLiveRelayPacketBroadcast.cpp  GenesisLiveRelayPacketClientConnectRequest.cpp  GenesisLiveRelayPacketClientConnectResponse.cpp  GenesisLiveRelayPacketClientPing.cpp  GenesisLiveRelayPacketConnectionClientLeft.cpp
GenesisMerge/: CMakeLists.txt
GenesisMerge/include/GenesisMerge/: GenesisMerge.hpp  GenesisMergeBundle.hpp  GenesisMergeFlow.hpp  GenesisMergeGit.hpp  Main.hpp
GenesisMerge/source/: GenesisMerge.cpp  GenesisMergeBundle.cpp  GenesisMergeFlow.cpp  GenesisStyle.cpp  Main.cpp
GenesisOutput/: CMakeLists.txt
GenesisOutput/include/GenesisOutput/: GenesisOutputBuilder.hpp
GenesisOutput/source/: GenesisOutputBuilder.cpp
GenesisRenderer/: CMakeLists.txt
GenesisRenderer/include/GenesisRenderer/: GenesisGuard.hpp  GenesisRenderer.hpp  GenesisVulkanRenderer.hpp
GenesisRenderer/source/: GenesisGuard.cpp  GenesisRenderer.cpp  GenesisVulkanRenderer.cpp
GenesisShared/: CMakeLists.txt
GenesisShared/include/GenesisShared/: GenesisBundle.hpp  GenesisFlow.hpp  GenesisLoadedFile.hpp  GenesisOperations.hpp  GenesisOutput.hpp  GenesisPinTracker.hpp  GenesisState.hpp  GenesisUtils.hpp  GenesisWindows.hpp
GenesisShared/source/: GenesisBundle.cpp  GenesisFlow.cpp  GenesisLoadedFile.cpp  GenesisOperations.cpp  GenesisOutput.cpp  GenesisState.cpp  GenesisUtils.cpp
GenesisShared/source/operations/: GenesisDebugOperation.cpp  GenesisFindPatternOperation.cpp  GenesisGetOperation.cpp  GenesisMathOperation.cpp  GenesisOutputDataClassMemberVariableOperation.cpp  GenesisOutputDataClassNonVirtualFunctionOperation.cpp  GenesisOutputDataClassVTableFunctionOperation.cpp  GenesisOutputDataClassVirtualFunctionOperation.cpp  GenesisOutputDataStaticFunctionOperation.cpp  GenesisOutputDataStaticVariableOperation.cpp  GenesisRipOperation.cpp
Samples/Editor/: 01_sample_populated.genesis
Samples/Merge/: Base.genesis  Local.genesis  Remote.genesis
Vendors/: CMakeLists.txt  imgui-file-dialog.cmake  imgui-node-editor.cmake  imgui.cmake  nlohmann-json.cmake
src/: generate.cpp  generate.h  main.cpp  stdafx.h
src/utils/: io.cpp  io.h  string.cpp  string.h
